# peek-rs

./: Cargo.toml  README.md
.github/workflows/: create_new_tag.yml  publish.yml  release.yml
src/: file_utils.rs  generic_collection.rs  main.rs
src/output/: mod.rs
src/parser/: json_parser.rs  mod.rs  yaml_parser.rs
testFiles/: test.json  test.yaml  test.yml
