[package]
name = "peek"
version = "0.1.0"
authors = ["JamesPatrickGill <jpgilldev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde = "1.0.125"
serde_json = "1.0.64"
serde_yaml = "0.8.17"
colored = "2"

[profile.release]
opt-level = 3

[[bin]]
bench = false
path = "src/main.rs"
name = "pk"
